sass/_theme.scss
/*
This file defines the custom stylesheet for the site theme independent of
third-party plugins and libraries.
*/
:root {
  /* breakpoint reference only */
  --screen-size-small: 30em;

  /* Disable ligatures */
  font-variant-ligatures: none;
  font-feature-settings: "liga" 0, "calt" 0;
}

@keyframes intro {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.dark .muted {
  color: rgba(255, 255, 255, 0.5);
}

.light .muted {
  color: rgba(0, 0, 0, 0.7);
}

.responsive-iframe {
  position: relative;
  padding-bottom: 56.25%;
  /* 16:9 ratio */
  padding-top: 25px;
  height: 0;
}

.responsive-iframe iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

iframe {
  border: 0;
}

main,
footer {
  animation: intro 0.3s both;
  animation-delay: 0.15s;
}

.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-links {
  display: flex;
  gap: 1ch;
}

footer time[datetime$="M"]:before {
  content: "\2013\0020";
}

@media only screen and (max-width: 30em) {
  footer time[datetime$="M"] {
    display: none;
  }

  .nav-header {
    flex-direction: column;
  }
}

blockquote cite {
  display: block;
}

blockquote cite::before {
  content: "\2014";
}

/* hack.css overrides and enhancements */
.hack li ul {
  margin: 0;
}

.main {
  padding: 20px 10px;
}

.light nav a.active {
  background-color: #ce0068;
  color: #fff;
}

.dark nav a.active {
  background-color: #b7005d;
  color: #fff;
}

.dark a[itemprop="url"] {
  color: #ff9800;
}

.light a[itemprop="url"] {
  color: #8D2220;
  font-weight: bold;
}

a[itemprop="url"]:hover {
  color: #fff;
}

a[href*="://"]::after,
a[rel*="external"] {
  content: " " url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20class='i-external'%20viewBox='0%200%2032%2032'%20width='14'%20height='14'%20fill='none'%20stroke='%23ff9800'%20stroke-linecap='round'%20stroke-linejoin='round'%20stroke-width='9.38%'%3E%3Cpath%20d='M14%209%20L3%209%203%2029%2023%2029%2023%2018%20M18%204%20L28%204%2028%2014%20M28%204%20L14%2018'/%3E%3C/svg%3E");
}

/* Remove external link arrow */
.feed-icon::after {
  content: none !important;
}

/* Style for all icons in the container */
#sun-icon,
#moon-icon,
.social-icon {
  padding: 0.1em;
  height: 1.5em;
  width: auto;
  display: block;
  margin-bottom: 0.25em;
}

.invert-icon {
  filter: invert(1)
}

/* Dark mode toggle specific styles to ensure alignment */
#dark-mode-toggle {
  display: flex;
  align-items: center;
}

/* Dark mode styles */
body.dark .social-icon {
  filter: invert(1);
}

/* Remove external link icon from figures */
figure a[href*="://"]::after,
figure a[rel*="external"] {
  content: "";
}

html {
  font-size: 13px;
}

.hack pre {
  font-size: 17px;

}

.light pre {
  color: #cccccc !important;
}


.icon {
  margin-bottom: -3px;
}

article[itemtype="http://schema.org/CreativeWork"] {
  margin-bottom: 3rem;

  header {
    h2 {
      margin-bottom: 1.2rem !important;
    }
  }

  nav.readmore {
    margin-top: 0.25rem;
  }
}

article [itemprop="description"],
article [itemprop="summary"] {
  margin-bottom: 20px;
  margin-top: 10px;
}

article [itemprop="summary"] p {
  margin: 0;
}

@media screen and (min-width: 768px) {
  html {
    font-size: 1em;
  }

  .container {
    max-width: 50rem;
  }
}

/* User actions container styling */
.user-actions-container {
  position: relative;
  flex-grow: 1;
  max-width: 100%;
  margin-left: 15px;
  margin-right: 15px;
  display: flex;
  align-items: center;
  gap: 15px;
}

@media only screen and (max-width: 30em) {
  .user-actions-container {
    margin: 10px;
    gap: 10px;
  }
}

/* Footnotes */
.footnote-reference {
  margin-left: 4px;
}


.footnote-definition {
  display: block;
  max-width: 100%;
  margin-bottom: 10px;
  overflow: hidden;
  overflow-x: auto;
  margin: 20px 0;
  padding-block-end: 5px;

  sup {
    display: inline-block;
    margin-right: 0.5em;
    color: #ff2e88;
    font-size: inherit;
    font-weight: bold;
    vertical-align: baseline;

    &::before {
      content: "[";
    }

    &::after {
      content: "]";
    }
  }

  p:first-of-type {
    display: inline;
  }

  // Add top margin to subsequent p elements
  p:not(:first-of-type) {
    margin-top: 0.5em;
  }
}

.footnote-return {
  margin-left: 0.5em;
  font-size: 1.2em;
}

/* Post history styling */
.revision-history {
  text-align: center;
  font-style: italic;

  a {
    border-bottom: none;
  }

  a::after {
    content: none;
  }
}

